change docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,11 @@ services:
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
-            MYSQL_ROOT_PASSWORD: 'password'
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ROOT_HOST: '%'
-            MYSQL_DATABASE: 'laravel'
-            MYSQL_USER: 'sail'
-            MYSQL_PASSWORD: 'password'
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
             - 'sail-mysql:/var/lib/mysql'
@@ -44,7 +44,7 @@ services:
                 - CMD
                 - mysqladmin
                 - ping
-                - '-ppassword'
+                - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
 
