--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,27 @@ on: [push, pull_request]
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: testing
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.3
+          extensions: mbstring, dom, fileinfo, mysql, sqlite
+          coverage: none
 
       - name: Install dependencies
         run: |
@@ -18,10 +36,6 @@ jobs:
 
       - name: Generate APP_KEY
         run: ./vendor/bin/sail artisan key:generate --env=testing
-      
-      - name: Run migrations
-        run: |
-          ./vendor/bin/sail artisan migrate:fresh --env=testing
 
       - name: Run tests
         run: ./vendor/bin/sail artisan test
